# rktpb

./: .gitignore  Cargo.toml  Paste.toml.template  README.md
src/: config.rs  cors.rs  highlight.rs  main.rs  os_header.rs  paste_id.rs  reaper.rs
static/: GitHub.tmtheme  code.css  code.min.css  markdown.css  markdown.min.css  normalize.min.css
templates/: code.html.tera  index.html.tera  markdown.html.tera  new.html.tera
